make sidebar higher

--- a/private/scss-finalium/style.scss
+++ b/private/scss-finalium/style.scss
@@ -568,7 +568,7 @@ input[type]:not([type=file]):not([type=submit]):focus {
 #guide {
   position: fixed;
   left: 0;
-  top: 47px;
+  top: 0;
   bottom: 0;
   width: $sidebarlength;
   background: $gray-100;
