--- a/private/scss-finalium/darkmode.scss
+++ b/private/scss-finalium/darkmode.scss
@@ -323,7 +323,8 @@ input[type]:not([type=file]):not([type=submit]) {
 }
 
 #guide {
-  background: #212121;
+  background-color: #383838f0;
+  border-right: 1px solid #606060;
 }
 
 .usermenushit {
