--- a/private/templates/layout111-common/_layout.twig
+++ b/private/templates/layout111-common/_layout.twig
@@ -134,7 +134,7 @@
         <div class="container">
             <article class="message is-danger">
                 <div class="message-header">
-                    <p>{{ __("Sorry %s, you are banned from squareBracket.", [userdata.name]) }}</p>
+                    <p>{{ __("Sorry %s, you are banned from Qobo.", [userdata.name]) }}</p>
                 </div>
                 <div class="message-body">
                     <p><strong>{{ userbandata.reason }}</strong><br/>
@@ -149,9 +149,9 @@
 <footer class="footer">
     <div class="content has-text-centered">
         <h1 class="title">Project 111</h1>
-        <p>squareBracket Version {{ version }} · Instance running on Git commit:
+        <p>Qobo Version {{ version }} · Instance running on Git commit:
             <a href="https://github.com/chazizgrkb/squarebracket/commit/{{ git_commit() }}">{{ git_commit() }}</a></p>
-        <p><strong>By the squareBracket contributors</strong> · 2020-{{ 'now' | date('Y') }} |
+        <p><strong>By the Qobo contributors</strong> · 2020-{{ 'now' | date('Y') }} |
             <a href="/statistics.php">Statistics</a> · <a href="/news.php">What's new</a></p>
     </div>
 </footer>
