--- a/private/templates/sbnext-common/components/nostalgia/_header.twig
+++ b/private/templates/sbnext-common/components/nostalgia/_header.twig
@@ -39,7 +39,7 @@
                                                         </li>
                                                         <li><a href="/studio/">{{ __("Studio") }}</a></li>
                                                         <li><a href="/settings.php">{{ __("Settings") }}</a></li>
-                                                        <li><a href="logout.php">{{ __("Log out") }}</a></li>
+                                                        <li><a href="logout.php">{{ __("Logout") }}</a></li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -52,7 +52,7 @@
                                 {% else %}
                                     <td><a href="register.php"><strong>{{ __("Register") }}</strong></a></td>
                                     <td style="padding: 0px 5px 0px 5px;">|</td>
-                                    <td><a href="login.php">{{ __("Sign In") }}</a></td>
+                                    <td><a href="login.php">{{ __("Login") }}</a></td>
                                 {% endif %}
                             </tr>
                             </tbody>
