--- a/private/templates/sbnext-common/upload.twig
+++ b/private/templates/sbnext-common/upload.twig
@@ -27,7 +27,7 @@
                     {% if isDebug %}
                         <label class="checkbox">
                             <input type="checkbox" id="debugUploaderSkip" name="debugUploaderSkip">
-                            Skip processing
+                            {{ __("Skip processing (MP4 ONLY, DEBUG)") }}
                         </label>
                     {% endif %}
                     <div class="right">
