--- a/private/templates/sbnext-mobile/components/_header.twig
+++ b/private/templates/sbnext-mobile/components/_header.twig
@@ -44,7 +44,7 @@
                             </div>
                         {% else %}
                             <div style="display: flex;justify-content: center;align-items: center;gap: 5px;margin-top: 2px;">
-                                <a href="../login.php">{{ __("Sign in") }}</a>
+                                <a href="../login.php">{{ __("Login") }}</a>
                             </div>
                         {% endif %}
                     </div>
