--- a/private/templates/sbnext-desktop/components/_header.twig
+++ b/private/templates/sbnext-desktop/components/_header.twig
@@ -35,7 +35,7 @@
                             </div>
                         {% else %}
                             <div style="display: flex;justify-content: center;align-items: center;gap: 5px;margin-top: 2px;">
-                                <a href="../login.php">{{ __("Sign in") }}</a>
+                                <a href="../login.php">{{ __("Login") }}</a>
                             </div>
                         {% endif %}
                     {% endif %}
