--- a/private/templates/sbnext-desktop/index.twig
+++ b/private/templates/sbnext-desktop/index.twig
@@ -32,16 +32,9 @@
                             <br>{{ __("%s view%s", [totalViews ?? __("no"), pluralViews]) }}</p>
                     </div>
                 {% else %}
-                    <div class="col-md-10">
-                        <h1>{{ __("Welcome to Qobo") }}</h1>
-                        <h3 style="padding:0;margin:0;">{{ __("Again.") }}</h3>
-                    </div>
-                    <div class="col-md-6">
-                        <a class="button button-primary button-large"
-                           href="register.php">{{ __("Get started") }} {{ icon('caret-right-fill', 16) }}</a><br><br>
-                        <big>{{ __("Already have an account?") }} <a class="button button-primary"
-                                                                     href="login.php">{{ __("Sign in") }}</a></big>
-                    </div>
+                    <h1>{{ __("Welcome to Qobo") }}</h1>
+                    <a class="button button-primary" href="login.php">{{ icon('box-arrow-in-right', 12) }} {{ __("Login") }}</a>
+                    <a class="button button-primary" href="register.php">{{ icon('pencil-square', 12) }} {{ __("Register") }}</a>
                 {% endif %}
             </div>
         </div>
