--- a/private/templates/sbnext-mobile/index.twig
+++ b/private/templates/sbnext-mobile/index.twig
@@ -32,18 +32,9 @@
                         </div>
                     </div>
                 {% else %}
-                    <div class="grid">
-                        <div class="col-md-8">
-                            <h1 style="padding:0;margin:8px 0;">{{ __("Welcome to Qobo") }}</h1>
-                            <h3 style="padding:0;margin:0;">{{ __("Again.") }}</h3>
-                        </div>
-                        <div class="col-md-4">
-                            <a class="button button-neutral button-large"
-                               href="register.php">{{ __("Get started") }} {{ icon('caret-right-fill', 16) }}</a><br><br>
-                            <big>{{ __("Already have an account?") }} <a class="button button-neutral"
-                                                                         href="login.php">{{ __("Sign in") }}</a></big>
-                        </div>
-                    </div>
+                    <h1>{{ __("Welcome to Qobo") }}</h1>
+                    <a class="button button-primary button-large" href="login.php">{{ icon('box-arrow-in-right', 12) }} {{ __("Login") }}</a>
+                    <a class="button button-primary button-large" href="register.php">{{ icon('pencil-square', 12) }} {{ __("Register") }}</a>
                 {% endif %}
             </div>
         </div>
