use consistent terms on stats page

--- a/private/templates/layout111-common/stats.twig
+++ b/private/templates/layout111-common/stats.twig
@@ -24,7 +24,7 @@
                 </div>
                 <div class="level-item has-text-centered">
                     <div>
-                        <p class="heading">Content uploaded</p>
+                        <p class="heading">Uploads</p>
                         <p class="title">{{ stats.videocount }}</p>
                     </div>
                 </div>
