--- a/private/templates/sbnext-common/stats.twig
+++ b/private/templates/sbnext-common/stats.twig
@@ -51,7 +51,7 @@
                 type: 'line',
                 data: {
                     datasets: [{
-                        label: 'Videos',
+                        label: 'Uploads',
                         data: [
                             {% for graph in video_graph_data %}
                             {
