--- a/private/templates/sbnext-common/stats.twig
+++ b/private/templates/sbnext-common/stats.twig
@@ -10,7 +10,7 @@
             <div class="card-body">
                 <div style="padding:5px;">
                     <h1>{{ __("About this instance of Qobo") }}</h1>
-                    <p>{{ __("View count may not be accurate due to deleted uploads.") }}</p>
+                    <p>{{ __("Some statistics may not be accurate.") }}</p>
                 </div>
                 <div class="grid">
                     <div class="col-md-4">
