--- a/private/templates/sbnext-desktop/watch.twig
+++ b/private/templates/sbnext-desktop/watch.twig
@@ -35,7 +35,7 @@
                                     <h1>{{ video.title }}</h1>
                                     <div class="small-stats">
                                         <div>{{ icon("eye", 20) }} {{ viewCount }}</div>
-                                        <div>{{ icon("chat", 20) }} {{ comCount }}</div>
+                                        <div>{{ icon("message", 20) }} {{ comCount }}</div>
                                         <div>{{ icon("star", 20) }} {{ total_favorites }}</div>
                                     </div>
                                 {% endif %}
