--- a/private/scss-finalium/_variables.scss
+++ b/private/scss-finalium/_variables.scss
@@ -1,16 +1,15 @@
 $threshold: 65%;
 $teal: #468aca;
-$red: #a6280f;
+$red: #ce1818;
 $white: #FCFCFC;
-$black: #000;
-$indigo: #4d27e6;
-$purple: #7942c1;
+$black: #111;
+$purple: #9c35ef;
 $pink: #ff23b1;
-$orange: #ff9900;
-$yellow: #f5cc14;
+$orange: #ff8800;
+$yellow: #ffd104;
 $cyan: #1778b8;
 $blue: #297fd6;
-$green: #439906;
+$green: #74a60a;
 $aqua: #20c997;
 $primary: $blue;
 $success: $green;
@@ -34,13 +33,11 @@ $gray-850: #333333;
 $gray-900: #242424;
 $light: #f8f9fa;
 $dark: #343a40;
-$indigo-color: $indigo;
 $teal-color: $teal;
 $orange-color: $orange;
 $colors: (
         "blue": $blue,
         "teal": $teal,
-        "indigo": $indigo,
         "purple": $purple,
         "pink": $pink,
         "red": $red,
@@ -61,7 +58,6 @@ $warning: $yellow;
 $danger: $red;
 $gray-dark: $gray-800;
 $neutral: $gray-100;
-$indigo-color: $indigo;
 $teal-color: $teal;
 $aqua-color: $aqua;
 $orange-color: $orange;
@@ -76,10 +72,10 @@ $theme-colors: (
         "neutral": $neutral,
         "light": $gray-100,
         "dark": $gray-dark,
-        "violet": $indigo-color,
         "blue-green": $teal-color,
         "aqua": $aqua-color,
         "carrot": $orange-color,
 );
 
 $font: "Inter", "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$sidebarlength: 50px;
