--- a/private/scss-finalium/style.scss
+++ b/private/scss-finalium/style.scss
@@ -5,8 +5,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-$sidebarlength: 50px;
-
 /* SB CSS STARTS HERE ======================================================== */
 
 html {
@@ -207,6 +205,10 @@ menu, ol, ul, li {
   display: inline-block;
   width: 100%;
 
+  .qobo-welcome {
+    text-align: center;
+  }
+
   .container {
     h1, h2, h3, h4, h5, h6, p {
       padding: 0;
@@ -311,9 +313,9 @@ input[type]:not([type=file]):not([type=submit]):focus {
   height: 100%;
 }
 
-.bi {
+.ti {
   display: inline-block;
-  margin-top: -0.2em;
+  margin-top: -0.25em;
   vertical-align: middle;
 }
 
