--- a/private/templates/sbnext-common/_layout_chaziz.twig
+++ b/private/templates/sbnext-common/_layout_chaziz.twig
@@ -4,18 +4,17 @@
     <meta charset="utf-8">
     <title>{% block title %}{% endblock %} - squareBracket</title>
     {% block head %}{% endblock %}
+    <link rel="manifest" href="/assets/icons/site.webmanifest">
+    <link rel="shortcut icon" href="/assets/icons/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
-    <link rel="manifest" href="/assets/icons/site.webmanifest">
-    <link rel="shortcut icon" href="/assets/icons/favicon.ico">
-    <meta name="apple-mobile-web-app-title" content="squareBracket">
-    <meta name="application-name" content="squareBracket">
-    <meta name="msapplication-config" content="/assets/icons/browserconfig.xml">
-    <meta name="viewport" content="initial-scale=1.0, width=device-width"/>
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa81d">
-    <meta name="msapplication-TileColor" content="#ffa81d">
-    <meta name="theme-color" content="#ffa81d">
+    <link rel="mask-icon" href="/assets/icons/safari-pinned-tab.svg" color="#1b93ff">
+    <meta name="apple-mobile-web-app-title" content="Qobo">
+    <meta name="application-name" content="Qobo">
+    <meta name="msapplication-TileColor" content="#1d3fc4">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/assets/css/style.css" type="text/css">
     {% if theme == 'dark' %}
         <link id="darkthm" rel="stylesheet" href="/assets/css/darkmode.css" type="text/css">
