--- a/private/templates/sbnext-desktop/watch.twig
+++ b/private/templates/sbnext-desktop/watch.twig
@@ -17,11 +17,9 @@
 {% block title %}{{ video.title }}{% endblock %}
 {% block content %}
     <div class="watchNext">
+		<h1>{{ video.title }}</h1>
         <div class="grid">
             <div class="col-md-10">
-                {% if theme == 'nostalgia' %}
-                    <h1>{{ video.title }}</h1>
-                {% endif %}
                 {% if postType == "video" %}
                     {{ include('/components/player.twig') }}
                 {% elseif postType == "artwork" %}
@@ -30,14 +28,11 @@
                     <div class="card card-body-fat">
                         <div class="grid">
                             <div class="col-md-10">
-                                {% if theme != 'nostalgia' %}
-                                    <h1>{{ video.title }}</h1>
-                                    <div class="small-stats">
-                                        <div>{{ icon("eye", 20) }} {{ viewCount }}</div>
-                                        <div>{{ icon("message", 20) }} {{ comCount }}</div>
-                                        <div>{{ icon("star", 20) }} {{ total_favorites }}</div>
-                                    </div>
-                                {% endif %}
+								<div class="small-stats">
+									<div>{{ icon("eye", 20) }} {{ viewCount }}</div>
+									<div>{{ icon("message", 20) }} {{ comCount }}</div>
+									<div>{{ icon("star", 20) }} {{ total_favorites }}</div>
+								</div>
                             </div>
                             {% if userbandata != true %}
                                 <div class="col-md-6 right">
@@ -75,7 +70,7 @@
                     </div>
                     <div class="card">
                         <div class="card-body-fat">
-                            <h3>{{ __("Comments") }} ({{ comCount }})</h3>
+                            <h3 class="sectionTitle">{{ __("Comments") }} ({{ comCount }})</h3>
                             {% if log and userbandata != true %}
                                 {% include "components/comment_form.twig" %}
                             {% endif %}
@@ -87,6 +82,7 @@
                     </div>
             </div>
             <div class="col-md-6">
+				<h3 class="sectionTitle">{{ __("Suggestions") }}</h3>
                 <div class="card">
                     <div class="card-body">
                         {% for related_video in related_videos %}
